syntax = "proto3";

package Aevatar.Agents.Twitter;

import "google/protobuf/timestamp.proto";

// ========== Agent State ==========

// Twitter Agent State
message TwitterGAgentState {
    string agent_id = 1;
    string user_id = 2;
    string token = 3;
    string token_secret = 4;
    string user_name = 5;
    map<string, string> replied_tweets = 6;  // tweet_id -> reply_text
    repeated string social_request_list = 7;  // request IDs
    string consumer_key = 8;
    string consumer_secret = 9;
    string encryption_password = 10;
    string bearer_token = 11;
    int32 reply_limit = 12;
    google.protobuf.Timestamp last_updated = 13;
}

// ========== Event Messages ==========

// Create Tweet Event - Creates a new tweet
message CreateTweetEvent {
    string text = 1;
}

// Reply Tweet Event - Replies to a specific tweet
message ReplyTweetEvent {
    string tweet_id = 1;
    string text = 2;
}

// Bind Twitter Account Event - Binds a Twitter account
message BindTwitterAccountEvent {
    string user_name = 1;
    string user_id = 2;
    string token = 3;
    string token_secret = 4;
}

// Unbind Twitter Account Event - Unbinds the Twitter account
message UnbindTwitterAccountEvent {
}

// Receive Reply Event - Handles received reply
message ReceiveReplyEvent {
    string tweet_id = 1;
    string text = 2;
}

// Reply Mention Event - Triggers reply to mentions
message ReplyMentionEvent {
}

// ========== Configuration Messages ==========

// Twitter Configuration - Configuration for TwitterGAgent
message TwitterConfiguration {
    string consumer_key = 1;
    string consumer_secret = 2;
    string encryption_password = 3;
    string bearer_token = 4;
    int32 reply_limit = 5;
}

